@@ -1,3 +1,9 @@
+2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkText.c (DumpLine): s/segPtr->size/currentSize/
+	throughout, but particularly in if lineChanged block where segPtr
+	may no longer be valid. [Bug 3053347]
+
 2010-08-21  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tk*Decls.h:   (regenerated with modified genStubs.tcl)
